...
<androidx.drawerlayout.widget.DrawerLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/drawer_layout">
    <ScrollView
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CreateEvent" android:background="#010203">

            <include
                layout="@layout/app_bar"
                android:id="@+id/app_bar">
            </include>

            <EditText
                android:id="@+id/ed_eventname"
                android:layout_width="201dp"
                android:layout_height="46dp"
                android:layout_below="@+id/app_bar"
                android:layout_marginStart="79dp"
                android:layout_marginLeft="79dp"
                android:layout_marginTop="62dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_toEndOf="@+id/tv_eventname"
                android:layout_toRightOf="@+id/tv_eventname"
                android:contentDescription="Name of Event"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@+id/tv_eventname"
                tools:text="Name of Event" />


            <EditText
                android:id="@+id/description"
                android:layout_width="212dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ed_eventname"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="69dp"
                android:layout_marginLeft="69dp"
                android:layout_marginTop="369dp"
                android:layout_marginEnd="-1dp"
                android:layout_marginRight="-1dp"
                android:layout_toEndOf="@+id/tv_eventdes"
                android:layout_toRightOf="@+id/tv_eventdes"
                android:contentDescription="Event Description"
                android:ems="10"
                android:inputType="textMultiLine"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.836"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventtime"
                tools:text="Event Description" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventtypespinner"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
...
                android:layout_marginStart="159dp"
                android:layout_marginLeft="159dp"
                android:layout_marginTop="116dp"
                android:layout_marginEnd="164dp"
                android:layout_marginRight="164dp"
                android:background="#0b2540"
                android:text="CREATE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description" />

            <TextView
...
                android:layout_below="@+id/eventtime"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="62dp"
                android:text="Address"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_eventname" />

            <TextView
                android:id="@+id/eventdate"
                android:layout_width="wrap_content"
                android:layout_height="47dp"
                android:layout_below="@+id/ed_eventname"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="106dp"
                android:layout_marginLeft="106dp"
                android:layout_marginTop="59dp"
                android:layout_marginEnd="150dp"
                android:layout_marginRight="150dp"
                android:text="Click to select Date"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_eventaddress" />

...
                android:layout_below="@+id/eventdate"
                android:layout_marginEnd="146dp"
                android:layout_marginLeft="107dp"
                android:layout_marginRight="146dp"
                android:layout_marginStart="107dp"
                android:layout_marginTop="58dp"
                android:text="Click to Select Time"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventdate" />

...
                android:layout_marginLeft="78dp"
                android:layout_marginTop="65dp"
                android:layout_toEndOf="@+id/tv_eventtype"
                android:layout_toRightOf="@+id/tv_eventtype" />

            <EditText
                android:id="@+id/address"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/eventtime"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="69dp"
...

        </RelativeLayout>
    </ScrollView>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        android:layout_gravity="start"
        app:menu="@menu/nav_menu">
    </com.google.android.material.navigation.NavigationView>



...
