...
                android:layout_marginTop="53dp"
                android:background="#0b2540"
                android:text="Location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.402"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_jevent" />

            <Button
                android:id="@+id/btn_jevent"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
...
                android:layout_marginEnd="129dp"
                android:layout_marginLeft="117dp"
                android:layout_marginRight="129dp"
                android:layout_marginStart="117dp"
                android:layout_marginTop="23dp"
                android:background="#0b2540"
                android:text="Join Event"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.399"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/Description" />

            <TextView
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.028"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_location" />

            <ListView
                android:id="@+id/listMembers"
                android:layout_width="wrap_content"
                android:layout_height="341dp"
                android:layout_below="@+id/tv_going"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
...
